fix: center align nav items

--- a/src/components/layout/InvestNav/styles.module.scss
+++ b/src/components/layout/InvestNav/styles.module.scss
@@ -152,6 +152,7 @@
     width: 100%;
     text-decoration: none;
     color: rgba(255, 255, 255, 0.75);
+    text-align: center;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
